[package]
name = "btc_rust"
version = "0.1.0"
authors = ["Vlad Lytvynenko <sir.sagramor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33"
csv = "1.0"
log4rs = "1.0"
log = "0.4"
